[mask-detection] add onnx to image to support serving deploy

--- a/mask-detection/1-training-and-evaluation.ipynb
+++ b/mask-detection/1-training-and-evaluation.ipynb
@@ -114,7 +114,8 @@
     "else:\n",
     "    commands = ['pip install torch==1.13.0+cpu torchvision==0.14.0+cpu -f https://download.pytorch.org/whl/torch_stable.html',\n",
     "                'pip install tensorboard==2.5.0',\n",
-    "                'pip install horovod==0.25.0']\n",
+    "                'pip install horovod==0.25.0',\n",
+    "                'pip install onnx~=1.15.0']\n",
     "    builder_env={'HOROVOD_WITH_MPI':'1',\n",
     "                 'HOROVOD_WITH_PYTORCH': '1'}\n",
     "\n",
