[fraud demo] update feature selection function

--- a/fraud-prevention-feature-store/02-create-training-model.ipynb
+++ b/fraud-prevention-feature-store/02-create-training-model.ipynb
@@ -975,6 +975,9 @@
    "source": [
     "feature_selection_fn = mlrun.import_function('hub://feature_selection')\n",
     "\n",
+    "feature_selection_fn.with_requirements(requirements=[\"matplotlib==3.8.4\"])\n",
+    "feature_selection_fn.deploy()\n",
+    "\n",
     "feature_selection_run = feature_selection_fn.run(\n",
     "            params={\"k\": 18,\n",
     "                    \"min_votes\": 2,\n",
