add mlun[complete] to to pip install - helping pip find the correct versions to install

--- a/stocks-prediction/01_ingest_news.ipynb
+++ b/stocks-prediction/01_ingest_news.ipynb
@@ -57,7 +57,7 @@
    ],
    "source": [
     "# install packages prerequisites and restart notebook\n",
-    "%pip install yfinance yahoo_fin transformers==4.11.3 tensorflow~=2.9.0"
+    "%pip install yfinance yahoo_fin transformers==4.11.3 tensorflow~=2.9.0 mlrun[complete]",
    ]
   },
   {
